fixed z-index on dropdown-menu and homepage links on techUsed items

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -67,11 +67,16 @@ main {
 }
 
 .navbar {
-  opacity: 0.45;
+  opacity: 1;
+  z-index: 1;
+}
+
+.dropdown-menu {
+  background: grey;
 }
 
 .navbar a:hover {
-  background: grey;
+  background: rgb(87, 87, 87);
   color: white;
   opacity: 1;
 }
